# sot-pattern-generator

./: .travis.yml
.travis/: build
include/sot-pattern-generator/: pg.h
src/: CMakeLists.txt  pg.cpp
src/dynamic_graph/sot/pattern_generator/: walking.py
unitTesting/: CMakeLists.txt  walk_few_steps.py  walk_few_steps.py.in
