# 
#  Copyright 
# 

SET(EXECUTABLE_NAME test${PROJECT_NAME})

ADD_DEFINITIONS(-DDEBUG=2)

ADD_EXECUTABLE(${EXECUTABLE_NAME}
  main.cc)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

LINK_DIRECTORIES(${${PROJECT_NAME}_BINARY_DIR}/src)
SET(EXECUTABLE_DEPENDENCIES
  next-step
  next-step-pg-sot
  step-checker
  step-computer-joystick
  step-observer
  step-queue
  step-time-line
  which-foot-upper
  pg
  pg-manager
  )
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${EXECUTABLE_DEPENDENCIES})
ADD_DEPENDENCIES(${EXECUTABLE_NAME} ${EXECUTABLE_DEPENDENCIES})
  
ADD_TEST(main_test ${EXECUTABLE_NAME})

PKG_CONFIG_USE_DEPENDENCY(${EXECUTABLE_NAME} jrl-dynamics)
PKG_CONFIG_USE_DEPENDENCY(${EXECUTABLE_NAME} jrl-walkgen)
IF(HRP2_DYNAMICS_FOUND)
  PKG_CONFIG_USE_DEPENDENCY(${EXECUTABLE_NAME} hrp2-dynamics)
ENDIF(HRP2_DYNAMICS_FOUND)
PKG_CONFIG_USE_DEPENDENCY(${EXECUTABLE_NAME} sot-core)

CONFIG_FILES("walk_few_steps.py")
ADD_TEST(test_romeo_walk ${PYTHON_EXECUTABLE} "${CMAKE_CURRENT_BINARY_DIR}/walk_few_steps.py")


IF (UNIX)
  SET(EXTRA_LD_LIBRARY_PATH $ENV{LD_LIBRARY_PATH})
  SET_PROPERTY(TEST test_romeo_walk PROPERTY 
    ENVIRONMENT 
    "LD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/plugin:${CMAKE_BINARY_DIR}/src:${BOOST_ROOT}/lib:${EXTRA_LD_LIBRARY_PATH}"
    "PYTHONPATH=${CMAKE_SOURCE_DIR}/src:${CMAKE_BINARY_DIR}/src:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/python2.7/site-packages:${CMAKE_SOURCE_DIR}/../_travis/install/lib/python2.7/site-packages/:$ENV{PYTHONPATH}"
  )
ENDIF(UNIX)


